# OpenClip

./: .gitignore  LICENSE  README.md  build.ps1  build.sh  go.mod  go.sum
cmd/openclip/: main.go
internal/audiocapture/: audiocapture.go  audiocapture.h  audiocapture_linux.go  audiocapture_windows.go
internal/capture/: capture.go  capture_darwin.go  capture_linux.go  capture_windows.go
internal/config/: config.go
internal/hotkey/: hotkey.go  hotkey_defs_darwin.go  hotkey_defs_linux.go  hotkey_defs_windows.go
internal/logger/: bootstrap.go  interface.go  logger.go  zaplogger.go
native/OpenClipAudio/: .gitignore  OpenClipAudio.sln
native/OpenClipAudio/OpenClipAudio/: OpenClipAudio.vcxproj  OpenClipAudio.vcxproj.filters  audiocapture.cpp  audiocapture.h  dllmain.cpp
native/OpenClipNative/: .gitignore  CMakeLists.txt  CircularBuffer.h  OCNative.h  OCNativeAudio.cpp  OpenClipNative.pc.in  OpenClipNative.sln  OpenClipNative.vcxproj  OpenClipNative.vcxproj.filters  dllmain.cpp  pch.h
native/OpenClipNative/include/OpenClipNative/: OCNative.h
native/OpenClipNative/include/OpenClipNative/platform/: AudioBackend.h  VideoBackend.h
native/OpenClipNative/include/OpenClipNative/platform/linux/: PipeWireAudio.h
native/OpenClipNative/include/OpenClipNative/platform/windows/: WASAPIAudio.h  WGCVideo.h
native/OpenClipNative/platform/linux/: CMakeLists.txt
native/OpenClipNative/platform/windows/: CMakeLists.txt  WASAPIAudio.cpp
native/OpenClipNative/src/: BackendFactory.cpp  OCNativeAudio.cpp  dllmain.cpp  framework.h  pch.h
